--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,17 +3,17 @@
   "name": "A Portfolio Page Built by Joseph Hansen with React",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "jhfavicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "jhlogo192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "jhlogo512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
